--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neumáticos Villanueva</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Asegúrate de que el href apunte correctamente al archivo CSS -->
 </head>
 <body>
     <header>
@@ -44,11 +44,18 @@
     </section>
 
     <footer>
+        <div class="botones-container">
+            <button>Llamar</button>
+            <button>WhatsApp</button>
+            <button>Google Maps</button>
+        </div>
     </footer>
-    
-    <script src="script.js"></script>
 </body>
 </html>
+
+
+
+
 
 
 
