--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neumáticos Villanueva</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Asegúrate de que el href apunte correctamente al archivo CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -45,13 +45,16 @@
 
     <footer>
         <div class="botones-container">
-            <button>Llamar</button>
-            <button>WhatsApp</button>
-            <button>Google Maps</button>
+            <button onclick="window.location.href='tel:3463451028'">Llamar</button>
+            <button onclick="window.location.href='https://wa.me/3463451028'">WhatsApp</button>
+            <button onclick="window.location.href='https://www.google.com/maps/place/Neum%C3%A1ticos+Villanueva/@-33.566116,-62.8853043,18.5z/data=!4m6!3m5!1s0x95cf2c707f5ff94b:0x4885c8b67d3c6c2f!8m2!3d-33.5664353!4d-62.8852511!16s%2Fg%2F11g68y8qth?authuser=0&entry=ttu'">Google Maps</button>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
