--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="logogomeria.png" alt="Logo de Neumáticos Villanueva" class="logo">
         <h1>Neumáticos Villanueva</h1>
         <nav>
             <ul>
@@ -44,16 +45,12 @@
     </section>
 
     <footer>
-        <div class="botones-container">
-            <button onclick="window.location.href='tel:3463451028'">Llamar</button>
-            <button onclick="window.location.href='https://wa.me/3463451028'">WhatsApp</button>
-            <button onclick="window.location.href='https://www.google.com/maps/place/Neum%C3%A1ticos+Villanueva/@-33.566116,-62.8853043,18.5z/data=!4m6!3m5!1s0x95cf2c707f5ff94b:0x4885c8b67d3c6c2f!8m2!3d-33.5664353!4d-62.8852511!16s%2Fg%2F11g68y8qth?authuser=0&entry=ttu'">Google Maps</button>
-        </div>
     </footer>
-
+    
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
