--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neumáticos Villanueva</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="robots" content="index" >
 </head>
 <body>
     <header>
